--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import datetime as dt"
+    "import datetime as dt\n",
+    "\n",
+    "from datetime import datetime, timedelta\n",
+    "from dateutil.relativedelta import *"
    ]
   },
   {
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,50 +48,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create engine to hawaii.sqlite\n",
-    "engine = create_engine(\"sqlite:///hawaii.sqlite\")"
+    "engine = create_engine(\"sqlite:///Resources/hawaii.sqlite\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
+    "Base = automap_base()\n",
     "\n",
-    "# reflect the tables\n"
+    "# reflect the tables\n",
+    "Base.prepare(engine, reflect=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['measurement', 'station']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# View all of the classes that automap found\n"
+    "# View all of the classes that automap found\n",
+    "Base.classes.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save references to each table\n"
+    "# Save references to each table\n",
+    "Measurement = Base.classes.measurement\n",
+    "Station = Base.classes.station"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB\n"
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
    ]
   },
   {
@@ -100,37 +120,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2017-08-23'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find the most recent date in the data set."
+    "# Find the most recent date in the data set.\n",
+    "most_recent_date = session.query(Measurement.date).order_by(Measurement.date.desc()).first()\n",
+    "\n",
+    "lastdate_df = pd.DataFrame(most_recent_date, columns=['date'])\n",
+    "\n",
+    "# lastdate_list = lastdate_df.values.tolist()\n",
+    "\n",
+    "lastdate = lastdate_df.to_string()[-10:]\n",
+    "\n",
+    "lastdate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'AxesSubplot' object has no attribute 'subplots'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-73-3f6ad7a0b382>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;31m# Use Pandas Plotting with Matplotlib to plot the data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m \u001b[0mfig\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0max\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;31m# plt.figure(figsize=(15,10))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprcp_sorted\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprcp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'AxesSubplot' object has no attribute 'subplots'"
+     ]
+    }
+   ],
    "source": [
     "# Design a query to retrieve the last 12 months of precipitation data and plot the results. \n",
     "# Starting from the most recent data point in the database. \n",
-    "\n",
+    "lastdate_dt = datetime.strptime(lastdate,'%Y-%m-%d')\n",
     "# Calculate the date one year from the last date in data set.\n",
-    "\n",
-    "\n",
+    "one_year_prev = lastdate_dt + relativedelta(months=-12)\n",
+    "filterdate = one_year_prev.strftime('%Y-%m-%d')\n",
+    "filterdate\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
-    "\n",
+    "last12mnth_prcp = session.query(Measurement.date, Measurement.prcp).filter(Measurement.date>=filterdate).all()\n",
+    "last12mnth_prcp\n",
     "\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
-    "\n",
+    "prcp_df = pd.DataFrame(last12mnth_prcp).set_index('date')\n",
     "\n",
     "# Sort the dataframe by date\n",
-    "\n",
+    "prcp_sorted = prcp_df.sort_index()\n",
     "\n",
     "# Use Pandas Plotting with Matplotlib to plot the data\n",
-    "\n",
-    "\n"
+    "# fig, ax = plt.subplots()\n",
+    "# # plt.figure(figsize=(15,10))\n",
+    "# ax.plot(prcp_sorted.prcp)\n",
+    "# plt.xticks(rotation=90)\n",
+    "# plt.tight_layout()\n",
+    "# plt.setp(ax.get_xticklabels()[::10], visible=False) \n",
+    "# plt.show()"
    ]
   },
   {
@@ -232,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.10"
   },
   "nteract": {
    "version": "0.12.3"
