--- a/ClimateAnalysis.ipynb
+++ b/ClimateAnalysis.ipynb
@@ -518,9 +518,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:PythonData] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-PythonData-py"
   },
   "language_info": {
    "codemirror_mode": {
